@@ -26,6 +26,8 @@
       from the association table by a delete operation matches the expected 
       results
     - session.get() and session.load() propigate **kwargs through to query
+    - fix to polymorphic query which allows the original polymorphic_union
+      to be embedded into a correlated subquery [ticket:577]
 - mysql
     - support for column-level CHARACTER SET and COLLATE declarations,
       as well as ASCII, UNICODE, NATIONAL and BINARY shorthand.
